[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = "yui"
version = "0.0.1"
dependencies = [
  "survey",
  "numpy",
  "scikit-image",
]
readme = "README.md"
keywords = ["cli", "utility", "menu"]
license = {file = "LICENSE"}
authors = [
  {name = "Yuri Klar", email = "juri.klar@outlook.com"},
]

[project.urls]
Repository = "https://github.com/yurimimi/yui.git"
Issues = "https://github.com/yurimimi/yui/issues"

[project.scripts]
yui = "yui.core:execute"
